[package]
name = "taxc"
version = "0.8.1"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2021"
description = "UK Tax Calculator for Capital Gains and Income"

[workspace]
members = [".", "taxc-derive"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
rust_decimal = { version = "1.40", features = ["serde"] }
rust_decimal_macros = "1.40"
tabled = "0.20"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
opener = "0.8"
thiserror = "1.0"
schemars = { version = "1.2", features = ["chrono04"] }
